-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 9.0.0-beta1
-
None
-
c9dc54802c (qt-creator/qt-creator/master) c9dc54802c (qt-creator/qt-creator/9.0)
using a current master build of qt-creator, i'm seeing one issue:
consider the code:
foo();
if the text cursor is at the end of the line and i press the space key, the space is not inserted. probably the clang-format plugin will re-run formatting and remove the inserted whitespace.
there seems to be a new option (format while typing), but that does not seem to be related. if i disable the clang-format plugin completely, the bug disappears
| For Gerrit Dashboard: QTCREATORBUG-28150 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 432516,3 | ClangFormat: do not remove trailing spaces on indent calculation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |